[feat] Add searchable webhook event catalogue
